<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster_bg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:foregroundGravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/holo_red_light"
            android:contentDescription="@string/movie_poster_for_background_desc"/>

        <ImageView
            android:id="@+id/movie_img"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/black"
            android:contentDescription="@string/movie_poster_desc"/>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/movie_img"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_bg"
            tools:text="MOVIE TITLE" />

        <RatingBar
            android:id="@+id/movie_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/movie_img"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <TextView
            android:id="@+id/movie_genre_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/movie_img"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            tools:text="GENRE" />

        <TextView
            android:id="@+id/movie_genre_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/movie_genre_1"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            tools:text="GENRE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/movie_genre_2"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            tools:text="GENRE" />


        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/movie_genre_1"
            android:text="@string/overview"
            style="@style/subText"/>

        <TextView
            android:id="@+id/movie_synops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_name"
            app:layout_constraintTop_toBottomOf="@id/overview"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem[36]" />

        <TextView
            android:id="@+id/tv_movie_director"
            style="@style/subText"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/director"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_synops" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/movie_img_director"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_director"
            tools:src="@drawable/poster_glass"
            android:contentDescription="@string/director_photo_desc"/>

        <TextView
            android:id="@+id/tv_director_name"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie_director"
            android:layout_toEndOf="@+id/movie_img_director"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/movie_img_director"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_director"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/tv_movie_date"
            style="@style/subText"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="104dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/tv_movie_director"
            app:layout_constraintTop_toBottomOf="@+id/movie_synops" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_director_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_date"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>